--- a/index/templates/index/header.html
+++ b/index/templates/index/header.html
@@ -23,8 +23,8 @@
   </head>
   <body>
     <!--HERE BE NAVBAR-->
-    <nav class="navbar navbar-light fixed-top navbar-expand-lg" id="nav-bar">
-      <div class="container" id="nav-content">
+    <nav class="navbar navbar-light fixed-top navbar-expand-lg" id="navbar">
+      <div class="container" id="navbar-drop">
         {% include 'navbar.html' %}
       </div>
     </nav>
