--- a/podcasts/templates/episodes.html
+++ b/podcasts/templates/episodes.html
@@ -45,7 +45,7 @@
         <div class="row">
           <div id="collapse{{ forloop.counter }}" class="collapse" role="tabpanel" aria-labelledby="show-more{{ forloop.counter }}" data-parent="#episode-accordion">
             <div class="col">
-              {{ episode.summary|safe }}
+              {{ episode.summary }}
             </div>
           </div>
         </div>
