--- a/index/static/style.css
+++ b/index/static/style.css
@@ -112,13 +112,13 @@
 }
 
 #logo {
+  text-align: center;
 }
 
 #brand {
   text-align: center;
   display: inline-block;
-  padding-top: .5rem;
-  padding-bottom: .5rem;
+  padding-bottom: .25rem;
   font-size: 1.5rem;
   line-height: inherit;
   white-space: nowrap;
@@ -159,17 +159,24 @@ body {
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4cdeb5', endColorstr='#91c2ba', GradientType=1 );
 }
 
-#nav-bar {
+#navbar-drop {
+  padding: 0;
+}
+
+#navbar {
   padding: 0px;
   background: rgba(255, 255, 255, 1);
-  -webkit-box-shadow: 2px 2px 4px 0px rgba(0,0,0,0.5);
-  -moz-box-shadow: 2px 2px 4px 0px rgba(0,0,0,0.5);
-  box-shadow: 2px 2px 4px 0px rgba(0,0,0,0.5);
+  -webkit-box-shadow: rgba(0,0,0,.3) 0 1px 3px;
+  -moz-box-shadow: rgba(0,0,0,.3) 0 1px 3px;
+  box-shadow: rgba(0,0,0,.3) 0 1px 3px;
   z-index: 99;
 }
 
+.nav-link {
+  padding: 10px;
+}
+
 .nav-fade li {
-  padding: 8px 8px;
   transition: background .25s ease-in-out;
   -moz-transition: background .25s ease-in-out;
   -webkit-transition: background .25s ease-in-out;
@@ -208,12 +215,12 @@ body {
 /* MULTI BAR */
 #multi-bar {
   overflow: hidden;
-  -webkit-box-shadow: 2px 2px 4px 0px rgba(0,0,0,0.5);
-  -moz-box-shadow: 2px 2px 4px 0px rgba(0,0,0,0.5);
-  box-shadow: 2px 2px 4px 0px rgba(0,0,0,0.5);
+  -webkit-box-shadow: rgba(0,0,0,.3) 0 1px 3px;
+  -moz-box-shadow: rgba(0,0,0,.3) 0 1px 3px;
+  box-shadow: rgba(0,0,0,.3) 0 1px 3px;
 }
 #multi-bar-scroll {
-  margin-top: 56px;
+  margin-top: 44px;
   z-index: 95;
 }
 #options {
@@ -241,10 +248,10 @@ body {
 }
 
 #stage.open {
-  height: 500px;
-  padding-top: 56px;
-  padding-bottom: 14px;
-  margin-bottom: -70px;
+  height: 474px;
+  padding-top: 44px;
+  /* padding-bottom: 14px; */
+  margin-bottom: -44px;
 }
 
 #flap.extended{
@@ -260,23 +267,26 @@ body {
 #search-form {
 }
 #search-field {
-  padding: .75rem 1rem;
+  padding: .5rem 0 .5rem .5rem;
 }
 #search-button {
   position: absolute;
-  left: 325px;
-  top: 20px;
+  left: 298px;
+  top: 10px;
   z-index: 50;
   background-color: inherit;
   border: 0;
 }
+#search-button:focus {
+  outline: 1px #fff;
+}
 #q {
-  width: 350px;
-  /*border-radius: 22px;*/
-  padding: .75rem 1rem;
-  -webkit-box-shadow: 2px 2px 4px 0px rgba(0,0,0,0.5);
-  -moz-box-shadow: 2px 2px 4px 0px rgba(0,0,0,0.5);
-  box-shadow: 2px 2px 4px 0px rgba(0,0,0,0.5);
+  width: 20rem;
+  border-radius: .25rem;
+  padding: .25rem .5rem;
+  -webkit-box-shadow: rgba(0,0,0,.3) 0 1px 3px;
+  -moz-box-shadow: rgba(0,0,0,.3) 0 1px 3px;
+  box-shadow: rgba(0,0,0,.3) 0 1px 3px;
 }
 
 #alphabet {
@@ -295,9 +305,15 @@ body {
 
 /* PODINFO */
 #podinfo {
-  padding: 15px 0px;
-  height: 385px;
+  -webkit-box-shadow: rgba(0,0,0,.3) 0 1px 3px;
+  -moz-box-shadow: rgba(0,0,0,.3) 0 1px 3px;
+  box-shadow: rgba(0,0,0,.3) 0 1px 3px;
+  margin-top: 15px;
+  margin-bottom: 15px;
+  padding: 15px;
+  height: 400px;
   background-color: #fff;
+  border-radius: .25rem;
 }
 #podinfo-bottom {
   height: 45px;
@@ -308,12 +324,22 @@ body {
   text-align: center;
 }
 
-#podinfo-image {
-  text-align: center;
+#podinfo-side {
+  list-style: none;
+  padding: 0;
+}
+
+#copyright {
+  overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
+    line-height: 1.5;
 }
 
 #sub-form {
-    padding-top: 15px;
+
 }
 
 .results-row {
@@ -325,28 +351,15 @@ body {
 }
 
 #settings {
-  height: 430px;
-  padding: 25px;
-  background: rgba(76,222,181,1);
-  background: -moz-linear-gradient(left, rgba(76,222,181,1) 0%, rgba(145,194,186,1) 100%);
-  background: -webkit-gradient(left top, right top, color-stop(0%, rgba(76,222,181,1)), color-stop(100%, rgba(145,194,186,1)));
-  background: -webkit-linear-gradient(left, rgba(76,222,181,1) 0%, rgba(145,194,186,1) 100%);
-  background: -o-linear-gradient(left, rgba(76,222,181,1) 0%, rgba(145,194,186,1) 100%);
-  background: -ms-linear-gradient(left, rgba(76,222,181,1) 0%, rgba(145,194,186,1) 100%);
-  background: linear-gradient(to right, rgba(76,222,181,1) 0%, rgba(145,194,186,1) 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4cdeb5', endColorstr='#91c2ba', GradientType=1 );
-}
-
-.breadcrumb-item+.breadcrumb-item::before {
-    display: inline-block;
-    padding-right: .5rem;
-    padding-left: .5rem;
-    color: #868e96;
-    content: ">>";
-}
-
-.navbar-collapse {
-  flex-basis: auto;
+  -webkit-box-shadow: rgba(0,0,0,.3) 0 1px 3px;
+  -moz-box-shadow: rgba(0,0,0,.3) 0 1px 3px;
+  box-shadow: rgba(0,0,0,.3) 0 1px 3px;
+  margin-top: 15px;
+  margin-bottom: 15px;
+  padding: 15px;
+  height: 400px;
+  background-color: #fff;
+  border-radius: .25rem;
 }
 
 #episodes-wrapper {
@@ -364,14 +377,14 @@ body {
 
 #results-wrapper {
   border: 1px solid #e6ecf0;
-  /*border-radius: 8px;*/
+  border-radius: .25rem;
   overflow: hidden;
   margin-top: 15px;
   margin-bottom: 15px;
   background-color: #FFFFFF;
-  -webkit-box-shadow: 1px 1px 2px 2px rgba(0,0,0,0.2), -1px -1px 2px 2px rgba(0,0,0,0.2);
-  -moz-box-shadow: 1px 1px 2px 2px rgba(0,0,0,0.2), -1px -1px 2px 2px rgba(0,0,0,0.2);
-  box-shadow: 1px 1px 2px 2px rgba(0,0,0,0.2), -1px -1px 2px 2px rgba(0,0,0,0.2);
+  -webkit-box-shadow: rgba(0,0,0,.3) 0 1px 3px;
+  -moz-box-shadow: rgba(0,0,0,.3) 0 1px 3px;
+  box-shadow: rgba(0,0,0,.3) 0 1px 3px;
 }
 .result-wrapper {
   padding-left: 0px;
@@ -379,10 +392,17 @@ body {
   padding-top: 0px;
 }
 .result-box {
-  /*-webkit-box-shadow: 2px 2px 4px 0px rgba(0,0,0,0.5);
-  -moz-box-shadow: 2px 2px 4px 0px rgba(0,0,0,0.5);
-  box-shadow: 2px 2px 4px 0px rgba(0,0,0,0.5);*/
-  padding: 4px;
+  transition: background .25s ease-in-out;
+  -moz-transition: background .25s ease-in-out;
+  -webkit-transition: background .25s ease-in-out;
+  padding: .25rem;
+}
+.result-box:hover {
+  -webkit-box-shadow: rgba(0,0,0,.3) 0 1px 3px;
+  -moz-box-shadow: rgba(0,0,0,.3) 0 1px 3px;
+  box-shadow: rgba(0,0,0,.3) 0 1px 3px;
+  background: #eee;
+  padding: .25rem;
 }
 .result-image {
   object-fit: cover;
