--- a/index/templates/navbar.html
+++ b/index/templates/navbar.html
@@ -1,9 +1,9 @@
-<div class="col">
+
   <ul class="nav nav-fade">
     <li class="nav-item">
-      <a class="nav-link blog-link" href="#">
+      <!-- <a class="nav-link blog-link" href="#">
         blog
-      </a>
+      </a> -->
     </li>
     <li class="nav-item">
       <a class="nav-link browse-link" href="{% url 'browse' %}">
@@ -18,9 +18,6 @@
     </li>
     {% endif %}
   </ul>
-</div>
-
-<div class="col-sm-2" id="brand">
   <a class="index-link" id="logo" href="{% url 'index' %}">
     <span class="x a">
       d
@@ -44,9 +41,6 @@
       d
     </span>
   </a>
-</div>
-
-<div class="col">
   <ul class="nav nav-fade">
     {% if user.is_authenticated %}
     <li class="nav-item ml-auto">
@@ -60,7 +54,7 @@
       </a>
     </li>
     {% else %}
-    <li class="nav-item ml-auto">
+    <li class="nav-item">
       <a class="nav-link ajax-register" href="{% url 'account_signup' %}">
         Register
       </a>
@@ -72,4 +66,3 @@
     </li>
     {% endif %}
   </ul>
-</div>
