--- a/index/static/style.css
+++ b/index/static/style.css
@@ -202,7 +202,7 @@ body {
 
 .options-button {
   border: 1px solid #ddd;
-  border-radius: 5px;
+  border-radius: .5rem;
   transition: background .25s ease-in-out;
   -moz-transition: background .25s ease-in-out;
   -webkit-transition: background .25s ease-in-out;
