--- a/index/templates/index/subscriptions.html
+++ b/index/templates/index/subscriptions.html
@@ -5,8 +5,15 @@ dopepod
 {% endblock %}
 
 {% block results %}
-<div class="col" id="results-wrapper">
-  <div class="row" id="subscriptions-list">
+<div class="col results-wrapper">
+  <div class="row color">
+    <div class="col texture results-bar">
+      <span>
+        {{ results_info }}
+      </span>
+    </div>
+  </div>
+  <div class="row results-list">
     <div class="col">
       {% for subscription in subscriptions %}
         <div class="row">
@@ -16,9 +23,17 @@ dopepod
             </a>
           </div>
           <div class="col">
-            <h6>
+            <h5>
               <a class="show-podinfo" data-itunesid="{{ subscription.itunesid }}" href="{% url 'podinfo' itunesid=subscription.itunesid %}">
                 {{ subscription.title }}
+              </a>
+            </h5>
+            <h6>
+              <span>
+                By
+              </span>
+              <a class="show-podinfo" data-itunesid="{{ subscription.itunesid }}" href="{% url 'podinfo' itunesid=subscription.itunesid %}">
+                {{ subscription.artist }}
               </a>
             </h6>
             <p>
