--- a/podcasts/templates/episodes.html
+++ b/podcasts/templates/episodes.html
@@ -1,58 +1,71 @@
 {% if episodes %}
-<div class="col" id="episodes-wrapper">
-  <a id="show-episodes" data-toggle="collapse" href="#episodeCollapse" aria-expanded="false" aria-controls="episodeCollapse">
-    <span>
-      Show episodes
-    </span>
-  </a>
-  <div class="collapse" id="episodeCollapse">
-    <div id="episode-accordion" role="tablist">
-      {% for episode in episodes %}
-        <div class="row">
-          <div class="col-auto">
-            <button class="btn btn-primary" type="button" role="tab" id="show-more{{ forloop.counter }}" data-toggle="collapse" data-target="#collapse{{ forloop.counter }}" aria-expanded="false" aria-controls="collapse{{ forloop.counter }}">
-              Show more
-            </button>
-          </div>
-          <div class="col">
-            {{ episode.title }}
-          </div>
-          <div class="col-auto">
-            {{ episode.pubDate }}
-          </div>
-          <div class="col-auto">
-            {{ episode.length }}
-          </div>
-          <div class="col-auto">
-            <form class="play" action="{% url 'play' %}" method="POST" target="_blank">
-              {% csrf_token %}
-              <input type="hidden" name="url" value="{{ episode.url }}">
-              <input type="hidden" name="type" value="{{ episode.type }}">
-              <input type="hidden" name="title" value="{{ episode.title }}">
-              <input type="hidden" name="date" value="{{ episode.pubDate }}">
-              <input type="hidden" name="itunesid" value="{{ podcast.itunesid }}">
-              <button class="btn btn-outline-primary" type="submit">
-                Play
-              </button>
-            </form>
-          </div>
-          <div class="col-auto">
-            <a class="btn btn-outline-primary" href="{{ episode.url }}">
-              Download
-            </a>
-          </div>
-        </div>
-        <div class="row">
-          <div id="collapse{{ forloop.counter }}" class="collapse" role="tabpanel" aria-labelledby="show-more{{ forloop.counter }}" data-parent="#episode-accordion">
-            <div class="col">
-              {{ episode.summary }}
+<div class="col results-wrapper">
+  <div class="row color">
+    <div class="col texture results-bar">
+      <nav class="nav">
+        <span>
+          {{ episodes_info }}
+        </span>
+        <button class="btn btn-primary ml-auto" type="button" data-toggle="collapse" data-target="#episode-collapse" aria-expanded="false" aria-controls="episode-collapse">
+          <span>
+            Show episodes
+          </span>
+        </button>
+      </nav>
+    </div>
+  </div>
+  <div class="collapse" id="episode-collapse">
+    <div class="row results-list">
+      <div class="col">
+        <div id="episode-accordion" role="tablist">
+          {% for episode in episodes %}
+            <div class="row">
+              <div class="col">
+                <button class="btn btn-primary" type="button" role="tab" id="show-more{{ forloop.counter }}" data-toggle="collapse" data-target="#collapse{{ forloop.counter }}" aria-expanded="false" aria-controls="collapse{{ forloop.counter }}">
+                  Show more
+                </button>
+                <span>
+                  {{ episode.title }}
+                </span>
+                <span>
+                  {{ episode.pubDate }}
+                </span>
+                <span>
+                  {{ episode.length }}
+                </span>
+                <span>
+                  <form class="play d-inline" action="{% url 'play' %}" method="POST" target="_blank">
+                    {% csrf_token %}
+                    <input type="hidden" name="url" value="{{ episode.url }}">
+                    <input type="hidden" name="type" value="{{ episode.type }}">
+                    <input type="hidden" name="title" value="{{ episode.title }}">
+                    <input type="hidden" name="date" value="{{ episode.pubDate }}">
+                    <input type="hidden" name="itunesid" value="{{ podcast.itunesid }}">
+                    <button class="btn btn-outline-primary" type="submit">
+                      Play
+                    </button>
+                  </form>
+                </span>
+                <span>
+                  <a class="btn btn-outline-primary" href="{{ episode.url }}">
+                    Download
+                  </a>
+                </span>
+              </div>
             </div>
-          </div>
+            <div class="row">
+              <div id="collapse{{ forloop.counter }}" class="collapse" role="tabpanel" aria-labelledby="show-more{{ forloop.counter }}" data-parent="#episode-accordion">
+                <div class="col ">
+                  {{ episode.summary }}
+                </div>
+              </div>
+            </div>
+            {% if not forloop.last %}
+              <hr />
+            {% endif %}
+          {% endfor %}
         </div>
-        {% if not forloop.last %}
-          <hr />
-        {% endif %}
-      {% endfor %}
+      </div>
     </div>
   </div>
 </div>
