--- a/index/templates/index/header.html
+++ b/index/templates/index/header.html
@@ -23,7 +23,7 @@
   </head>
   <body>
     <!--HERE BE NAVBAR-->
-    <nav class="navbar navbar-light fixed-top navbar-expand-lg" id="navbar">
+    <nav class="navbar fixed-top navbar-expand-md" id="navbar">
       <div class="container" id="navbar-drop">
         {% include 'navbar.html' %}
       </div>
