--- a/index/templates/index/subscriptions.html
+++ b/index/templates/index/subscriptions.html
@@ -17,12 +17,12 @@ dopepod
     <div class="col">
       {% for subscription in subscriptions %}
         <div class="row">
-          <div class="col-auto">
+          <div class="col-auto pl-0">
             <a class="show-podinfo" data-itunesid="{{ subscription.itunesid }}" href="{% url 'podinfo' itunesid=subscription.itunesid %}">
               <img class="img-fluid" src="//images.weserv.nl/?url={{ subscription.artworkUrl }}100x100bb.jpg&w=100&h=100&t=absolute" />
             </a>
           </div>
-          <div class="col">
+          <div class="col pr-0">
             <h5>
               <a class="show-podinfo" data-itunesid="{{ subscription.itunesid }}" href="{% url 'podinfo' itunesid=subscription.itunesid %}">
                 {{ subscription.title }}
@@ -38,7 +38,7 @@ dopepod
             </h6>
             <p>
               <span>
-                Last updated: 
+                Last updated:
               </span>
               {{ subscription.last_updated }}
             </p>
