--- a/index/templates/navbar.html
+++ b/index/templates/navbar.html
@@ -1,5 +1,8 @@
-
-  <ul class="nav nav-fade">
+<a class="nav-link navbar-toggler" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+  <i class="fas fa-bars"></i>
+</a>
+<div class="dropdown-menu navbar-dropdown" aria-labelledby="navbarDropdownMenuLink">
+  <ul class="nav nav-fade d-block">
     <li class="nav-item">
       <a class="nav-link blog-link" href="#">
         Blog
@@ -13,6 +16,32 @@
     {% if user.is_authenticated %}
     <li class="nav-item">
       <a class="nav-link subscriptions-link" href="{% url 'subscriptions' %}">
+        Subscriptions
+      </a>
+    </li>
+    {% endif %}
+    <li class="nav-item">
+      <a class="nav-link settings-link" href="{% url 'settings' %}">
+        Settings
+      </a>
+    </li>
+  </ul>
+</div>
+
+  <ul class="nav nav-fade">
+    <li class="nav-item">
+      <a class="nav-link blog-link d-none d-md-block" href="#">
+        Blog
+      </a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link browse-link d-none d-md-block" href="{% url 'browse' %}">
+        Browse
+      </a>
+    </li>
+    {% if user.is_authenticated %}
+    <li class="nav-item">
+      <a class="nav-link subscriptions-link d-none d-md-block" href="{% url 'subscriptions' %}">
         Subscriptions
       </a>
     </li>
@@ -44,25 +73,35 @@
   <ul class="nav nav-fade">
     {% if user.is_authenticated %}
     <li class="nav-item ml-auto">
-      <a class="nav-link settings-link" href="{% url 'settings' %}">
+      <a class="nav-link settings-link d-none d-md-block" href="{% url 'settings' %}">
         Settings
       </a>
     </li>
     <li class="nav-item">
-      <a class="nav-link ajax-logout" href="{% url 'account_logout' %}">
+      <a class="nav-link ajax-logout d-none d-md-block" href="{% url 'account_logout' %}">
         Logout
       </a>
     </li>
     {% else %}
     <li class="nav-item">
-      <a class="nav-link ajax-register" href="{% url 'account_signup' %}">
+      <a class="nav-link ajax-register d-none d-md-block" href="{% url 'account_signup' %}">
         Register
       </a>
     </li>
     <li class="nav-item">
-      <a class="nav-link ajax-login" href="{% url 'account_login' %}">
+      <a class="nav-link ajax-login d-none d-md-block" href="{% url 'account_login' %}">
         Login
       </a>
     </li>
     {% endif %}
   </ul>
+
+  {% if user.is_authenticated %}
+  <a class="nav-link navbar-toggler ajax-logout" href="{% url 'account_logout' %}">
+    <i class="fas fa-sign-out-alt"></i>
+  </a>
+  {% else %}
+  <a class="nav-link navbar-toggler ajax-login" href="{% url 'account_login' %}">
+    <i class="fas fa-sign-in-alt"></i>
+  </a>
+  {% endif %}
