--- a/index/templates/index/index.html
+++ b/index/templates/index/index.html
@@ -11,7 +11,7 @@ dopepod
     {% block stage %}
     {% endblock %}
   </div>
-  <div class="row" id="multi-bar-scroll">
+  <div class="row" id="multibar-scroll">
     {% include 'multibar.html' %}
   </div>
 </div>
