--- a/index/static/style.css
+++ b/index/static/style.css
@@ -113,8 +113,8 @@
 #logo {
   text-align: center;
   font-size: 22px;
-  padding-top: 4px;
-  padding-bottom: 10px;
+  padding-top: 6px;
+  padding-bottom: 8px;
 }
 
 body {
@@ -127,6 +127,7 @@ body {
 
 .texture {
   background: url("grid.png");
+  width: 100%;
 }
 
 .btn-outline-primary {
@@ -173,24 +174,33 @@ body {
     background: rgba(50, 50, 50, 1);
 }
 
-a.nav-link {
-  color: rgba(255, 255, 255, 1);
-}
-
 .nav-link {
   padding: 10px;
 }
-
 .nav-fade li {
   border-radius: .25rem;
   transition: background .25s ease-in-out;
   -moz-transition: background .25s ease-in-out;
   -webkit-transition: background .25s ease-in-out;
 }
-
-.nav-fade li:hover {
+#multibar .nav-fade li {
+  margin-top: 3px;
+  margin-bottom: 3px;
+}
+#navbar .nav-fade li:hover {
+  color: rgba(0, 0, 0, 1);
   background: #ddd;
 }
+#multibar .nav-fade li:hover {
+  background: #ddd;
+}
+#navbar .nav-link {
+  color: rgba(255, 255, 255, 1);
+}
+#navbar .nav-link:hover {
+  color: rgba(0, 0, 0, 1);
+}
+
 
 #main-content {
   background-color: #FFFFFF;
@@ -219,12 +229,10 @@ a.nav-link {
 }
 
 /* MULTI BAR */
-#multi-bar {
-  overflow: hidden;
-
-
+#multibar {
+  
 }
-#multi-bar-scroll {
+#multibar-scroll {
   margin-top: 44px;
   z-index: 95;
   -webkit-box-shadow: rgba(0,0,0,.3) 0 1px 3px;
@@ -281,11 +289,12 @@ a.nav-link {
 }
 #search-field {
   padding: .5rem 0 .5rem .5rem;
+  width: 250px;
 }
 #search-button {
   position: absolute;
-  left: 298px;
-  top: 10px;
+  left: 220px;
+  top: 12px;
   z-index: 50;
   background-color: inherit;
   border: 0;
@@ -294,7 +303,6 @@ a.nav-link {
   outline: 1px #fff;
 }
 #q {
-  width: 20rem;
   border-radius: .25rem;
   padding: .25rem .5rem;
   -webkit-box-shadow: rgba(0,0,0,.3) 0 1px 3px;
@@ -324,7 +332,6 @@ a.nav-link {
   padding: 15px;
   height: 550px;
   background-color: #fff;
-  border-radius: .25rem;
 }
 #podinfo-main {
   overflow: hidden;
