--- a/index/templates/navbar.html
+++ b/index/templates/navbar.html
@@ -1,4 +1,4 @@
-<div class="col">
+<div class="col-3">
 <a class="nav-link navbar-toggler" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
   <i class="fas fa-bars"></i>
 </a>
@@ -49,7 +49,7 @@
   {% endif %}
 </ul>
 </div>
-<div class="col" id="logo" >
+<div class="col-6" id="logo" >
 <a class="index-link" href="{% url 'index' %}">
   <span class="x a">
     d
@@ -74,40 +74,36 @@
     </span>
   </a>
 </div>
-<div class="col">
+<div class="col-3">
   <ul class="nav nav-fade">
     {% if user.is_authenticated %}
     <li class="nav-item ml-auto">
       <a class="nav-link settings-link d-none d-md-block" href="{% url 'settings' %}">
         Settings
       </a>
+      <a class="nav-link ajax-logout d-block d-md-none" href="{% url 'account_logout' %}">
+        <i class="fas fa-sign-out-alt"></i>
+      </a>
     </li>
-    <li class="nav-item">
-      <a class="nav-link ajax-logout d-none d-md-block" href="{% url 'account_logout' %}">
+    <li class="nav-item d-none d-md-block">
+      <a class="nav-link ajax-logout" href="{% url 'account_logout' %}">
         Logout
       </a>
     </li>
     {% else %}
-    <li class="nav-item">
+    <li class="nav-item ml-auto">
       <a class="nav-link ajax-register d-none d-md-block" href="{% url 'account_signup' %}">
         Register
       </a>
+      <a class="nav-link ajax-login d-block d-md-none" href="{% url 'account_login' %}">
+        <i class="fas fa-sign-in-alt"></i>
+      </a>
     </li>
-    <li class="nav-item">
-      <a class="nav-link ajax-login d-none d-md-block" href="{% url 'account_login' %}">
+    <li class="nav-item d-none d-md-block">
+      <a class="nav-link ajax-login" href="{% url 'account_login' %}">
         Login
       </a>
     </li>
     {% endif %}
   </ul>
-
-  {% if user.is_authenticated %}
-  <a class="nav-link navbar-toggler ajax-logout" href="{% url 'account_logout' %}">
-    <i class="fas fa-sign-out-alt"></i>
-  </a>
-  {% else %}
-  <a class="nav-link navbar-toggler ajax-login" href="{% url 'account_login' %}">
-    <i class="fas fa-sign-in-alt"></i>
-  </a>
-  {% endif %}
 </div>
